update footer image and layout issues with new image

--- a/Components/footer/footer.scss
+++ b/Components/footer/footer.scss
@@ -86,8 +86,12 @@
         margin: 5px;
         float: right;
 
+        img {
+            width: 100%;
+        }
+
         @media (max-width: $bp-xs) {
-            float: none; 
+            float: none;
             clear: both;
         }
     }
@@ -144,7 +148,7 @@
                 clear: both;
                 float: none;
                 text-align: center;
-                
+
                 li {
                     clear: both;
                     float: none;
@@ -156,10 +160,6 @@
         #footer-logo-container {
             clear: both;
             text-align: center;
-
-            img {
-                float: none;
-            }
         }
 
         #copyright-container {
