--- a/Components/partners/partners.scss
+++ b/Components/partners/partners.scss
@@ -137,7 +137,7 @@
 
     .partner-info {
         position: absolute;
-        background: rgba(0, 0, 0, .5);
+        background: rgba(0, 0, 0, .8);
         top: 150px;
         transition-property: all;
         transition-duration: .5s;
